fix: fix social buttons overlap

--- a/css/index.css
+++ b/css/index.css
@@ -186,14 +186,26 @@ body {
   z-index: 1000;
 }
 
+#social {
+  display: none;
+}
+
 @media screen and (min-width:575px) and (max-width: 1015px) {
   #about-container {
     min-height: 180px;
+  }
+
+  #social {
+    display: inline;
   }
 }
 
 @media screen and (max-width: 450px) {
   #about-container {
     min-height: 180px;
+  }
+
+  #social {
+    display: inline;
   }
 }
